--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@upstash/redis": "^1.35.6",
     "framer-motion": "^12.23.24",
     "next": "16.0.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.12"
